# python-scriptum-helpers

./: README.md  pyproject.toml  setup.py
.github/workflows/: release.yaml
scriptum_helpers/: authorize.py  storage.py
scriptum_helpers/product/: jinja2.py  product.py
